# langgraph_work

./: .gitignore  01_langgraph.ipynb  02_langgraph.ipynb  03_langgraph.ipynb  03_langgraph_설명.md  04_tax_graph.ipynb  04_tax_graph_설명.md  05_privacy_law_graph.ipynb  05_sub_agent.ipynb  06_privacy_law_multiagent.ipynb  CLAUDE.md  income_tax_agent.py  main.py  pyproject.toml
data/: privacy_law.txt
