[project]
name = "langgraph-work"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "docx2txt==0.8",
    "gradio==4.44.1",
    "langchain>=0.3.1",
    "langchain-chroma==0.1.4",
    "langchain-community>=0.3.1",
    "langchain-mcp-adapters==0.0.9",
    "langchain-openai>=0.2.1",
    "langgraph>=0.2.35", # 버전을 0.2.35 이상으로 살짝 상향
    "mcp[cli]>=1.6.0",
    "python-dotenv==1.0.1",
    "ipykernel==6.29.5",
    "ipython==8.31.0",
    "transformers>=4.40.0",
    "tokenizers>=0.19.0",
    "pinecone<=5.0.0",
    "pinecone-client>=5.0.1",
    "langchain-pinecone>=0.1.3",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "torchaudio>=2.10.0",
]
